--- a/Testmark-styles.css
+++ b/Testmark-styles.css
@@ -5,14 +5,13 @@
 * Browsers: last 5 version
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap");
 
 body {
-    background-color: #ACE9D4;
+    background-color: #ace9d4;
     font-family: Helvetica, Arial, sans-serif;
     color: black;
     font-size: 1rem;
-
 }
 
 h1 {
@@ -24,10 +23,9 @@ h2 {
 }
 
 #logo {
-    font-family: 'Catamaran', sans-serif;
+    font-family: "Catamaran", sans-serif;
     color: firebrick;
 }
-
 
 .container {
     margin-top: 2%;
@@ -37,18 +35,17 @@ h2 {
 }
 
 #c1 {
-    background-color: #F5F3F0;
+    background-color: #f5f3f0;
 }
 
 #c2 {
-    background-color: #22B2B2;
+    background-color: #22b2b2;
     text-align: right;
 }
 
 #c3 {
     padding: 0%;
     margin: 0%;
-
 }
 
 #TCleanrrom {
@@ -60,15 +57,13 @@ h2 {
 #c5,
 #c10,
 #c11 {
-    background-color: #22B2B2;
+    background-color: #22b2b2;
     padding-top: 1rem;
-
 }
 
 #c5,
 #c14 {
     border-left: 0.1rem black solid;
-
 }
 
 #NN {
@@ -77,7 +72,6 @@ h2 {
     margin: 0%;
     padding-right: 0%;
     border-right: 0rem;
-
 }
 
 #Brand,
@@ -88,44 +82,33 @@ h2 {
 #NavL4,
 #NavL5,
 #NavL6 {
-    color: #04047C;
+    color: #04047c;
 }
 
 #c6,
 #c8,
 #c12,
-#c15 {
-    background-color: #22B2B2;
+#c15,
+#c17 {
+    background-color: #22b2b2;
     text-align: center;
     padding-bottom: 2rem;
 }
 
-#c7,
-#c7Q,
-#c7W,
-#c7E,
-#c7R,
-#c7T {
-    background-color: #22B2B2;
+.cardDiv {
+    background-color: #22b2b2;
     padding-bottom: 1rem;
 }
 
 .card {
-
-    background-color: #F5F3F0;
+    background-color: #f5f3f0;
     padding: 1rem;
     padding-bottom: 0rem;
 }
 
-#idcCable,
-#idcCableQ,
-#idcCableW,
-#idcCableE,
-#idcCableR,
-#idcCableT {
+.productImage {
     width: 100%;
     height: 30vw;
-
 }
 
 #ProductT1,
@@ -138,7 +121,7 @@ h2 {
 #c9 {
     padding-left: 35%;
     padding-right: 35%;
-    background-color: #22B2B2;
+    background-color: #22b2b2;
 }
 
 #idcCable1 {
@@ -153,12 +136,11 @@ h2 {
 #c13,
 #c14,
 #c16 {
-    background-color: #22B2B2;
-
+    background-color: #22b2b2;
 }
 
 #f6 {
-    background-color: #22B2B2;
+    background-color: #22b2b2;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
