--- a/Testmark-styles.css
+++ b/Testmark-styles.css
@@ -89,6 +89,7 @@ h2 {
 #c8,
 #c12,
 #c15,
+.title,
 #c17 {
     background-color: #22b2b2;
     text-align: center;
@@ -108,12 +109,13 @@ h2 {
 
 .productImage {
     width: 100%;
-    height: 30vw;
+    height: 18vw;
 }
 
 #ProductT1,
 #IDC1,
 #About,
+.titleText,
 #Tech {
     text-decoration: underline;
 }
