--- a/Testmark-styles.css
+++ b/Testmark-styles.css
@@ -147,3 +147,9 @@ h2 {
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
+
+#demo {
+    background-color: #f9d71c;
+    color: black;
+    font-weight: bold;
+}
